--- a/index.html
+++ b/index.html
@@ -1,52 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Comercial</title>
+
+    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+
+    <!-- Ícone -->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+
+    <!-- CSS Customizado -->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- Fontes e ícones -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css">
-
-
 </head>
-
 <body>
+
+<!-- Header dinâmico -->
 <div id="header"></div>
 
-    <!-- Header 
-    <header class="header">
-        <div class="container">
-            <h1 class="logo">
-                <img src="https://loja.dca.com.br/profiles/img/logo3.png" alt="Descrição da imagem" width="100">
+<!-- Conteúdo Principal -->
+<main class="main">
+    <div class="container">
 
-
-            </h1>
-            <nav class="nav" >
-                <a href="index.html" class="nav-link">Ínicio</a>
-                <a href="https://loja.dca.com.br/home" target="_blank" class="nav-link">Loja Online</a>
-                <a href="index.html" class="fi fi-br"></a> 
-                <a href="index_us.html" class="fi fi-us"></a> 
-                <a href="index_cr.html" class="fi fi-cr"></a> 
-            </nav>
-            
-        </div>
-    </header>-->
-    <!-- Main Content -->
-    <main class="main">
-        <div class="container">
-            <!-- Categories Section -->
-
-            <section id="categorias" class="categories-section">
-                <h2 data-i18n class="section-title">Categorias</h2>
-                <div class="categories-grid">
-
-                    <!--  Comercial -->
+        <!-- Categorias -->
+        <section id="categorias" class="categories-section">
+            <h2 data-i18n class="section-title">Categorias</h2>
+            <div class="categories-grid">
+                <!-- Aqui entram os seus category-card sem alterações no conteúdo -->
+                <!--  Comercial -->
                     <div class="category-card">
                         <h3 class="category-title">
                             <i data-i18n class="fas fa-handshake"></i>
@@ -228,129 +216,78 @@
 
                         </ul>
                     </div>
-                </div>
-            </section>
-
-
-
-            <!-- BANNER -->
-            <section id="banner" class="banner-section">
-                <div class="container">
-                    <img src="assets/logos/banner1.png" alt="Banner" class="banner">
-                    <!-- ...restante do conteúdo... -->
-                </div>
-            </section>
-
-            <!-- API Feeds Section Linkedin -->
-            <section id="feeds" class="feeds-section">
-                <h2 data-i18n class="section-title">Feeds e Atualizações</h2>
-                <div class="feeds-container">
-                    <!-- Social Media Feed -->
-                    <div class="feed-grid">
-                        <h3 class="feed-title">
-                            <i class="fab fa-linkedin-in"></i>
-                            Linkedin DCA
-                        </h3>
-                        <div class="feed-content" id="social-feed">
-                            <div class="feed-placeholder">
-                                <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
-                                <script src="https://static.elfsight.com/platform/platform.js" async></script>
-                                <div class="elfsight-app-e00d1b9c-d053-49eb-9d87-a412ae4a7c52" data-elfsight-app-lazy>
-                                </div>
-                            </div>
-                            <!-- Placeholder posts -->
-
-                        </div>
-                    </div>
-
-                    <!-- API Updates Feed Instagram-->
-                    <div class="feed-grid">
-                        <h3 class="feed-title">
-                            <i class="fab fa-instagram"></i>
-                            Instagram DCA
-                        </h3>
-                        <div class="feed-content" id="content-feed">
-                            <div class="feed-placeholder">
-                                <!-- Elfsight Instagram Feed | Untitled Instagram Feed -->
-                                <script src="https://static.elfsight.com/platform/platform.js" async></script>
-                                <div class="elfsight-app-61be2ff4-b4da-465a-be99-3a245d32a0ab" data-elfsight-app-lazy>
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-
-
-                    <!-- API Feeds Section youtube -->
-                    <section id="feeds" class="feeds-section">
-
-                        <!-- Social Media Feed -->
-                        <div class="feed-grid">
-                            <h3 class="feed-title">
-                                <i class="fab fa-youtube"></i>
-                                Youtube
-                            </h3>
-                            <div class="feed-content" id="social-feed">
-                                <div class="feed-placeholder">
-                                    <!-- Elfsight YouTube Gallery | Untitled YouTube Gallery -->
-                                    <script src="https://static.elfsight.com/platform/platform.js" async></script>
-                                    <div class="elfsight-app-a75b9728-6190-49f7-a123-8f09536507d7"
-                                        data-elfsight-app-lazy></div>
-                                </div>
-                                <!-- Placeholder posts -->
-
-                            </div>
-                        </div>
-                </div>
-            </section>
-        </div>
-    </main>
-
-
-    <!-- Footer -->
-   <footer class="footer">
-    <!-- API Chatbot Botpress-->
-    <script src="https://cdn.botpress.cloud/webchat/v3.2/inject.js" defer></script>
-    <script src="https://files.bpcontent.cloud/2025/08/06/16/20250806160047-LZD8S114.js" defer></script>
-    <div class="container">
-        <div class="footer-content">
-            <div class="footer-section">
-                <h4 data-i18n="matriz">Matriz</h4>
-                <p data-i18n="endereco">R. Profa. Ana de Oliveira Viana, 184 - Fanny, Curitiba - PR, 81030-200</p>
-                <p data-i18n="telefone">Telefone 4007-2977 | Whatsapp (41) 3021-1728</p>
-                <p data-i18n="cnpj">CNPJ: 00.111.511/0001-80</p>
             </div>
+        </section>
 
-            <div class="footer-section">
-                <h4 data-i18n="redes_sociais">Redes Sociais</h4>
-                <div class="social-links">
-                    <a href="https://www.linkedin.com/company/deltacableamericas/posts/?feedView=all"><i
-                            class="fab fa-linkedin"></i></a>
-                    <a href="https://www.instagram.com/dc.americas"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.youtube.com/@DCADeltaCableAmericas"><i class="fab fa-youtube"></i></a>
-                </div>
+        <!-- Banner -->
+        <section id="banner" class="banner-section">
+            <div class="container">
+                <img src="assets/logos/banner1.png" alt="Banner" class="banner">
             </div>
-        </div>
-        <div class="footer-bottom">
-            <p data-i18n="copyright">&copy; 2025 DCA Delta Cable Americas. Todos os direitos reservados.</p>
-        </div>
+        </section>
+
+        <!-- Feeds e Atualizações -->
+        <section id="feeds" class="feeds-section">
+            <h2 data-i18n class="section-title">Feeds e Atualizações</h2>
+            <div class="feeds-container">
+
+                <!-- Feed LinkedIn -->
+                <div class="feed-grid">
+                    <h3 class="feed-title">
+                        <i class="fab fa-linkedin-in"></i> Linkedin DCA
+                    </h3>
+                    <div class="feed-content">
+                        <script src="https://static.elfsight.com/platform/platform.js" async></script>
+                        <div class="elfsight-app-e00d1b9c-d053-49eb-9d87-a412ae4a7c52" data-elfsight-app-lazy></div>
+                    </div>
+                </div>
+
+                <!-- Feed Instagram -->
+                <div class="feed-grid">
+                    <h3 class="feed-title">
+                        <i class="fab fa-instagram"></i> Instagram DCA
+                    </h3>
+                    <div class="feed-content">
+                        <script src="https://static.elfsight.com/platform/platform.js" async></script>
+                        <div class="elfsight-app-61be2ff4-b4da-465a-be99-3a245d32a0ab" data-elfsight-app-lazy></div>
+                    </div>
+                </div>
+
+                <!-- Feed YouTube -->
+                <div class="feed-grid">
+                    <h3 class="feed-title">
+                        <i class="fab fa-youtube"></i> Youtube
+                    </h3>
+                    <div class="feed-content">
+                        <script src="https://static.elfsight.com/platform/platform.js" async></script>
+                        <div class="elfsight-app-a75b9728-6190-49f7-a123-8f09536507d7" data-elfsight-app-lazy></div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
     </div>
-    <script src="script.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</footer>
+</main>
 
-    <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-  fetch('header.html')
-    .then(res => res.text())
-    .then(data => document.getElementById('header').innerHTML = data);
+<!-- Footer dinâmico -->
+<div id="footer"></div>
 
-  fetch('footer.html')
-    .then(res => res.text())
-    .then(data => document.getElementById('footer').innerHTML = data);
+<!-- Scripts -->
+<script>
+    // Carregar Header
+    fetch('header.html')
+        .then(res => res.text())
+        .then(data => document.getElementById('header').innerHTML = data);
+
+    // Carregar Footer
+    fetch('footer.html')
+        .then(res => res.text())
+        .then(data => document.getElementById('footer').innerHTML = data);
 </script>
 
-</body>
+<!-- JS Customizado e Bootstrap -->
+<script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+</body>
 </html>
